--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -12,7 +12,6 @@
 
 .section-home-hero {
     position: relative;
-    padding-top: 105px;
     background-color: #000;
     margin-bottom: 60px;
 
@@ -78,7 +77,7 @@
 
     @include media-breakpoint-up(lg) {
         // height: calc(100vh - 140px);
-        padding-top: 150px;
+        padding-top: 126px;
         margin-bottom: 110px;
 
         .hero-grid {
@@ -86,9 +85,13 @@
         }
     }
 
-    // @include media-breakpoint-up(xxl) {
-    //     min-height: 855px;
-    // }
+    @include media-breakpoint-up(xl) {
+        padding-top: 134px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        padding-top: 150px;
+    }
 }
 
 /* section-clients-slider */
