--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -14,7 +14,6 @@
     position: relative;
     padding-top: 81px;
     background-color: #000;
-    margin-bottom: 60px;
 
     .container-fluid {
         height: 100%;
@@ -83,8 +82,6 @@
     // Минимальная ширина
 
     @include media-breakpoint-up(md) {
-        margin-bottom: 70px;
-
         .hero-video-wrapper {
             .mobile-image {
                 display: none;
@@ -106,12 +103,11 @@
 
     @include media-breakpoint-up(xl) {
         padding-top: 114px;
-        margin-bottom: 80px;
     }
 
     @include media-breakpoint-up(xxl) {
+        height: 100vh;
         padding-top: 150px;
-        margin-bottom: 110px;
 
         .hero-swiper-wrapper {
             margin-bottom: 30px;
@@ -122,14 +118,18 @@
 /* section-clients-slider */
 
 .section-clients-slider {
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 
     @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
         margin-bottom: 80px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        margin-bottom: 110px;
     }
 }
 
